--- a/BlogUI/Views/Articles/Details.cshtml
+++ b/BlogUI/Views/Articles/Details.cshtml
@@ -23,12 +23,10 @@
     </div>
 </section>
 
-<hr />
-<br />
-<div class="row container image-fluid justify-content-center">
+<div class="row container justify-content-center ">
     @if (Model.Image != null)
     {
-        <img src="@imageService.DecodeImage(Model.Image.ImageData, Model.Image.ImageExtension)" />
+        <img src="@imageService.DecodeImage(Model.Image.ImageData, Model.Image.ImageExtension)" width="100%" />
     }
 </div>
 
