--- a/BlogUI/Views/Shared/_Layout.cshtml
+++ b/BlogUI/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="2">DATABSES</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="2">DATABASES</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Articles" asp-action="ArticleIndex" asp-route-id="3">LAYOUTS</a>
